--- a/easy-image.cabal
+++ b/easy-image.cabal
@@ -12,19 +12,21 @@ Library
                     bytestring >= 0.10,
                     QuickCheck >= 2.5,
                     JuicyPixels >= 2.0
-  Exposed-Modules:  Graphics.EasyImage.Attribute
-                    Graphics.EasyImage.BoundingBox
+  Exposed-Modules:  
+                    Graphics.EasyImage
+                    Graphics.EasyImage.Attribute
                     Graphics.EasyImage.Chart
                     Graphics.EasyImage.Colour
-                    Graphics.EasyImage.Compile
-                    Graphics.EasyImage.Curve
                     Graphics.EasyImage.Geometry
-                    Graphics.EasyImage.Image
                     Graphics.EasyImage.Math
-                    Graphics.EasyImage.Render
                     Graphics.EasyImage.Style
                     Graphics.EasyImage.Text
-                    Graphics.EasyImage
+  Other-Modules:    
+                    Graphics.EasyImage.BoundingBox
+                    Graphics.EasyImage.Compile
+                    Graphics.EasyImage.Curve
+                    Graphics.EasyImage.Image
+                    Graphics.EasyImage.Render
   GHC-Options:      -O2 -funbox-strict-fields
 
 
