--- a/easy-image.cabal
+++ b/easy-image.cabal
@@ -1,11 +1,25 @@
 Name:               easy-image
 Version:            1.0
 Description:        Library for drawing simple pictures
-License:            PublicDomain
+License:            MIT
+License-file:       LICENSE
 Author:             Ulf Norell
 Maintainer:         ulf.norell@gmail.com
 Build-Type:         Simple
 Cabal-Version:      >=1.2
+
+Data-Files:         fonts/LiberationMono-Bold.svg
+                    fonts/LiberationMono-BoldItalic.svg
+                    fonts/LiberationMono-Italic.svg
+                    fonts/LiberationMono-Regular.svg
+                    fonts/LiberationSans-Bold.svg
+                    fonts/LiberationSans-BoldItalic.svg
+                    fonts/LiberationSans-Italic.svg
+                    fonts/LiberationSans-Regular.svg
+                    fonts/LiberationSerif-Bold.svg
+                    fonts/LiberationSerif-BoldItalic.svg
+                    fonts/LiberationSerif-Italic.svg
+                    fonts/LiberationSerif-Regular.svg
 
 Library
   Build-Depends:    base >= 3.0,
@@ -13,6 +27,7 @@ Library
                     QuickCheck >= 2.5,
                     HaXml >= 1.23,
                     containers >= 0.4,
+                    filepath >= 1.3,
                     JuicyPixels >= 2.0
   Exposed-Modules:  
                     Graphics.EasyImage
@@ -25,6 +40,7 @@ Library
                     Graphics.EasyImage.Style
                     Graphics.EasyImage.Text
                     Graphics.EasyImage.Text.SVG
+                    Graphics.EasyImage.Text.Fonts.Liberation
   Other-Modules:    
                     Graphics.EasyImage.BoundingBox
                     Graphics.EasyImage.Compile
@@ -32,6 +48,6 @@ Library
                     Graphics.EasyImage.Image
                     Graphics.EasyImage.Render
                     Graphics.EasyImage.Tests
+                    Paths_easy_image
   GHC-Options:      -O2 -funbox-strict-fields
-
 
