--- a/curves.cabal
+++ b/curves.cabal
@@ -1,13 +1,17 @@
 Name:               curves
 Version:            1.0.0
-Description:        Library for drawing curve based images.
 Category:           Graphics
 License:            MIT
 License-file:       LICENSE
 Author:             Ulf Norell
 Maintainer:         ulf.norell@gmail.com
 Build-Type:         Simple
-Cabal-Version:      >=1.2
+Cabal-Version:      >=1.6
+Synopsis:           Library for drawing curve based images.
+Description:        EasyImage provides an easy to use library for creating images. The basic
+                    primitive is a curve, which, in the simplest case, is a continuous function
+                    from a scalar parameter to a 2-dimensional point on the curve. Images
+                    are rendered as PNG images.
 
 Data-Files:         fonts/LiberationMono-Bold.svg
                     fonts/LiberationMono-BoldItalic.svg
@@ -22,8 +26,13 @@ Data-Files:         fonts/LiberationMono-Bold.svg
                     fonts/LiberationSerif-Italic.svg
                     fonts/LiberationSerif-Regular.svg
 
+Source-Repository head
+  type:     git
+  location: https://github.com/UlfNorell/curves
+
 Library
-  Build-Depends:    base >= 3.0,
+
+  Build-Depends:    base >= 3 && < 5,
                     bytestring >= 0.10,
                     QuickCheck >= 2.5,
                     HaXml >= 1.23,
