--- a/curves.cabal
+++ b/curves.cabal
@@ -8,10 +8,11 @@ Maintainer:         ulf.norell@gmail.com
 Build-Type:         Simple
 Cabal-Version:      >=1.6
 Synopsis:           Library for drawing curve based images.
-Description:        EasyImage provides an easy to use library for creating images. The basic
-                    primitive is a curve, which, in the simplest case, is a continuous function
-                    from a scalar parameter to a 2-dimensional point on the curve. Images
-                    are rendered as PNG images.
+Description:        Curves is an easy to use library for creating images. The
+                    basic primitive is a curve, which, in the simplest case, is
+                    a continuous function from a scalar parameter to a
+                    2-dimensional point on the curve. Images are rendered as
+                    PNG images.
 
 Data-Files:         fonts/LiberationMono-Bold.svg
                     fonts/LiberationMono-BoldItalic.svg
