use HsColour -partial

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,7 +6,7 @@ all : $(patsubst %,html/%.html,$(example_files))
 ExamplePP : ExamplePP.hs
 	ghc --make -O -o $@ $<
 
-HSCOLOUR := HsColour -lit
+HSCOLOUR := HsColour -lit -anchor -partial
 PP       := ./ExamplePP
 
 html/%.html : %.lhs $(PP) ExampleGen.hs
