make clean in update-gh-pages script to make sure files are deleted properly

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -12,3 +12,7 @@ PP       := ./ExamplePP
 html/%.html : %.lhs $(PP) ExampleGen.hs
 	$(PP) $< | $(HSCOLOUR) -css > $@
 
+clean :
+	-rm images/*
+	-rm html/*.html
+
